# Hare

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  requirements.txt  setup.py
benchmark/kernel/: kernel_script.sh  launcher.py  preprocess.py  test_realistic.py  test_synthetic.py
benchmark/model/: launcher.py  preprocess.py  script.sh  test_model.py
benchmark/plot/: plot_H800.py  plot_ablation.py  plot_decode_model.py  plot_deepseek_megablocks_breakdown.py  plot_padding_overhead.py  plot_prefill_mlp_H800.py  plot_prefill_model.py  plot_realistic.py  plot_synthetic_vary.py
hare/infer/: MiniCPM_hare.py  MiniCPM_hare_breakdown.py  ablation.sh  deepseek_hare.py  deepseek_hare_breakdown.py  mixtral_hare.py  mixtral_hare_breakdown.py  qwen2_moe_hare.py  qwen2_moe_hare_breakdown.py  test_script.sh
hare/model/: deepseek.py  deepseek_breakdown.py  mixtral.py  mixtral_breakdown.py  qwen2.py  qwen2_breakdown.py
hare/utils/: sparsify.py
hare/utils/csrc/: CMakeLists.txt
hare/utils/csrc/hare_ops/: CMakeLists.txt  indices.cu  ops.cu
hare/utils/csrc/megablock_ops/: CMakeLists.txt  ops.cu
profiling/: breakdown.csv  compute_intensity.ipynb  megasparse_moe_breakdowns_warmup10_repeat100.csv  megasparse_moe_breakdowns_warmup10_repeat100_launch.csv  moe_breakdown.ipynb  moe_breakdown_warmup10_iter100.csv  moe_breakdown_warmup20_iter100.csv  shared_memory_usage.ipynb  simulation_sm.ipynb
sparse_warp_spec/: CMakeLists.txt  develop.sh  run.sh  setup.py
sparse_warp_spec/csrc/: python_api.cpp
sparse_warp_spec/csrc/indexing/: main.cu
sparse_warp_spec/csrc/jit/: cache.hpp  compiler.hpp  device_runtime.hpp  kernel_runtime.hpp
sparse_warp_spec/csrc/utils/: exception.hpp  hash.hpp  layout.hpp  math.hpp  system.hpp
sparse_warp_spec/profiling/ncu/: megasparse.ncu-rep
sparse_warp_spec/sparse_gemm/: __init__.py
sparse_warp_spec/sparse_gemm/include/: cute  cutlass
sparse_warp_spec/tests/: sparsity.py  test_kernel.py
(+26 files in other folders)
